--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 if (NOT MSVC)
   # sqlite3 produces warnings, so don't treat them as errors (assume that if compiles correctly)
-  set_source_files_properties(sqlite3.c PROPERTIES COMPILE_FLAGS -Wno-error)
+  set_source_files_properties(sqlite3.c PROPERTIES COMPILE_FLAGS)
 endif()
 add_library(sqlite3 sqlite3.c)
 if (UNIX AND NOT APPLE)
